--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
-mysql/*
-nginx/*
-node/*
+mysql/.DS_Store
+nginx/.DS_Store
+node/.DS_Store
+node/node_files
+mysql/mysql_files
 .idea
 node-nginx-docker.iml
