--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     entrypoint: dockerize -wait tcp://db:3306 -timeout 120s docker-entrypoint.sh
     volumes:
       - ./node/node_files:/usr/src/app
-    command: node index.js
+    command: bash -c "npm install && node index.js"
     networks:
       - node-network
     tty: true
